--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
 include mmdet3d/model_zoo.yml
+include requirements/*.txt
 recursive-include mmdet3d/configs *.py *.yml
 recursive-include mmdet3d/tools *.sh *.py
+recursive-include mmdet3d/ops *.cpp *.cu *.h *.cc
+recursive-include mmdet3d/demo *.png *.jpg *.bin *.pkl *.py
