--- a/configs/3dssd/metafile.yml
+++ b/configs/3dssd/metafile.yml
@@ -11,9 +11,9 @@ Collections:
     README: configs/3dssd/README.md
 
 Models:
-  - Name: 3dssd_kitti-3d-car
+  - Name: 3dssd_4x4_kitti-3d-car
     In Collection: 3DSSD
-    Config: configs/3dssd/3dssd_kitti-3d-car.py
+    Config: configs/3dssd/3dssd_4x4_kitti-3d-car.py
     Metadata:
       Training Memory (GB): 4.7
     Results:
