--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,7 +92,7 @@ jobs:
         run: |
           pip install mmcv-full -f https://download.openmmlab.com/mmcv/dist/cu101/${{matrix.torch_version}}/index.html
           pip install mmdet==2.11.0
-          pip install mmseg==0.14.0
+          pip install mmsegmentation==0.14.0
           pip install -r requirements.txt
       - name: Build and install
         run: |
