--- a/configs/paconv/metafile.yml
+++ b/configs/paconv/metafile.yml
@@ -21,4 +21,4 @@ Models:
         Dataset: S3DIS
         Metrics:
           mIoU: 66.65
-    Weights: https
+    Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/paconv/paconv_ssg_8x8_cosine_150e_s3dis_seg-3d-13class/paconv_ssg_8x8_cosine_150e_s3dis_seg-3d-13class_20210729_200615-2147b2d1.pth
