--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,12 @@ jobs:
             mmcv: 1.8.0+cu101
             torchvision: 0.9.0+cu101
             cuda_arch: "7.0"
+          - python-version: 3.9
+            torch: 1.8.0+cu101
+            torch_version: torch1.8.0
+            mmcv: 1.8.0+cu101
+            torchvision: 0.9.0+cu101
+            cuda_arch: "7.0"
 
     steps:
       - uses: actions/checkout@v2
