--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,6 +100,9 @@ jobs:
           pip install mmdet==2.14.0
           pip install mmsegmentation==0.14.1
           pip install -r requirements.txt
+      - name: Install dependencies for compiling onnx when python=3.9
+        run: pip install protobuf && sudo apt-get install libprotobuf-dev protobuf-compiler
+        if: ${{matrix.python-version == '3.9'}} 
       - name: Build and install
         run: |
           rm -rf .eggs
